 ══════════
   Main App (v3.0.1.1)
   September 16th, 2019
 ══════════
  • ADDED: reset diagnostic logs via diagnostic page so I can make sure i'm starting with fresh logs when necessary.
  • UPDATED: Authentication valid history fixes.

 ══════════
   Actions App (v3.0.1.0)
   September 15th, 2019
 ══════════
  • REMOVED: button triggers removed until I can repair the logic.
  • UPDATED: diagnostic logs tweaks.

 ════════════
   Device (v3.0.1.0)
   September 15th, 2019
 ════════════
  • UPDATED: diagnostic logs tweaks.

-------------------------------------------------------------------

 ══════════
   Main App (v3.0.1.0)
   September 15th, 2019
 ══════════
  • NEW: public release
  • ADDED: Updated diagnostic page to include link to directly email developer.
  • UPDATED: Logging tweaks.

 ══════════
   Actions App (v3.0.1.0)
   September 15th, 2019
 ══════════
  • NEW: public release

 ════════════
   Device (v3.0.1.0)
   September 15th, 2019
 ════════════
  • NEW: public release

-------------------------------------------------------------------