@@ -2,7 +2,7 @@
     "appDataVer": "2.0",
     "versions": {
         "mainApp": {
-            "ver": "3.0.1.1"
+            "ver": "3.0.1.2"
         },
         "actionApp": {
             "ver": "3.0.1.1"
